staging/for-memorystore/memorystore-redis-tls-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: memorystore-redis-tls
spec:
  hosts:
  - cart.memorystore-redis.onlineboutique
  addresses:
  - 10.138.108.243/32
  endpoints:
  - address: 10.138.108.243
  location: MESH_EXTERNAL
  resolution: STATIC
  ports:
  - number: 6378
    name: tcp-redis
    protocol: TCP
